Fix for gallery displays on mobile

--- a/public/css/sass/_mixins.scss
+++ b/public/css/sass/_mixins.scss
@@ -1,3 +1,5 @@
+@import "_breakpoints";
+
 @mixin hr-image($lr-image, $hr-image) {
   background-image: url($lr-image);
   @media print,
@@ -78,16 +80,24 @@ $black: #000;
     .featherlight-content {
       text-align: left;
       vertical-align: middle;
-      display: inline-block;
-      overflow: auto;
+      display: inline-flex;
+      overflow: hidden;
       min-width: 30%;
       margin-left: 5%;
       margin-right: 5%;
-      max-height: 85%;
-      max-width: 85%;
-      background: $white;
+      height: 85%;
+      width: 85%;
       cursor: auto;
       white-space: normal;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      @include breakpoint($tablet) {
+        max-height: 85%;
+        max-width: 85%;
+        height: inherit;
+        width: inherit;
+      }
     }
     .featherlight-inner {
       display: block;
@@ -95,14 +105,18 @@ $black: #000;
     .featherlight-close-icon {
       position: absolute;
       z-index: 9999;
-      top: 50px;
-      right: 50px;
+      top: 20px;
+      right: 20px;
       line-height: 22px;
       width: 22px;
       cursor: pointer;
       text-align: center;
       text-indent: -10000px;
-      background: image-url('site/close.svg') no-repeat 0 0
+      background: url('/images/site/close.svg') no-repeat 0 0;
+      @include breakpoint($tablet) {
+        top: 50px;
+        right: 50px;
+      }
     }
     .featherlight-image {
       width: 100%;
