--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -151,10 +151,12 @@
         height: 169px
 
 .gallery
-  width: 100%
+
   img
     max-width: 100%
+    max-height: 100%
     display: none
+    margin: 0 auto
     &.active
       display: block
 
